<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_background_02"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="20dp"
        >

        <TextView
        android:id="@+id/firstNameText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/transparent_01"
        android:gravity="center_vertical"
        android:text="@string/player_cross"
        android:textSize="14sp"
        android:textStyle="bold"
            android:textColor="@color/gray"
            />

        <EditText
            android:id="@+id/firstNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/transparent_01"
            android:textSize="19sp"
            android:textStyle="bold"
            android:ems="12"
            android:textColor="@color/gray"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp">

        <TextView
            android:id="@+id/secondNameText"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/transparent_01"
            android:gravity="center_vertical"
            android:text="@string/player_zero"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/gray"
            />

        <EditText
            android:id="@+id/secondNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:textSize="19sp"
            android:textStyle="bold"
            android:background="@drawable/transparent_01"
            android:ems="12"
            android:textColor="@color/gray"/>

    </LinearLayout>

    <Button
        android:id="@+id/start_game"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:onClick="click"
        android:text="@string/fill_names"
        android:backgroundTint="@color/purple_200"
        android:textColor="@color/white"
        android:enabled="false"
        />

</LinearLayout>