<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_background_02"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/scoreBoard"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/transparent_01"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/empty"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/gray"/>

    <TextView
        android:id="@+id/infoBoard"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/transparent_01"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/pushStart"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/gray"/>


    <GridLayout
        android:id="@+id/gameFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="3"
        android:padding="20dp"
        >
        <Button
            android:id="@+id/one"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_row="0"
            android:layout_column="0"
            android:tag="0,0"
            android:onClick="click"
            android:text="@string/empty"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_margin="4dp"
            android:backgroundTint="@color/green"
            />

        <Button
            android:id="@+id/two"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_row="0"
            android:layout_column="1"
            android:tag="0,1"
            android:onClick="click"
            android:text="@string/empty"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_margin="4dp"
            android:backgroundTint="@color/green"/>

        <Button
            android:id="@+id/three"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_row="0"
            android:layout_column="2"
            android:tag="0,2"
            android:onClick="click"
            android:text="@string/empty"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_margin="4dp"
            android:backgroundTint="@color/green"/>

        <Button
            android:id="@+id/four"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_row="1"
            android:layout_column="0"
            android:tag="1,0"
            android:onClick="click"
            android:text="@string/empty"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_margin="4dp"
            android:backgroundTint="@color/green"/>

        <Button
            android:id="@+id/five"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_row="1"
            android:layout_column="1"
            android:tag="1,1"
            android:onClick="click"
            android:text="@string/empty"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_margin="4dp"
            android:backgroundTint="@color/green"/>

        <Button
            android:id="@+id/six"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_row="1"
            android:layout_column="2"
            android:tag="1,2"
            android:onClick="click"
            android:text="@string/empty"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_margin="4dp"
            android:backgroundTint="@color/green"/>

        <Button
            android:id="@+id/seven"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_row="2"
            android:layout_column="0"
            android:tag="2,0"
            android:onClick="click"
            android:text="@string/empty"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_margin="4dp"
            android:backgroundTint="@color/green"/>

        <Button
            android:id="@+id/eight"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_row="2"
            android:layout_column="1"
            android:tag="2,1"
            android:onClick="click"
            android:text="@string/empty"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_margin="4dp"
            android:backgroundTint="@color/green"/>

        <Button
            android:id="@+id/nine"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_row="2"
            android:layout_column="2"
            android:tag="2,2"
            android:onClick="click"
            android:text="@string/empty"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_margin="4dp"
            android:backgroundTint="@color/green"/>
    </GridLayout>

    <Button
        android:id="@+id/start"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:onClick="startClick"
        android:text="@string/start"
        android:layout_margin="4dp"/>

    <Button
        android:id="@+id/restart"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:onClick="restartClick"
        android:text="@string/restart"
        android:layout_margin="4dp"/>


</LinearLayout>